--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "cookie": "^0.5.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
@@ -33,7 +34,6 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/cookie": "^0.5.1",
-    "@types/jsonwebtoken": "^9.0.2",
-    "axios": "^1.4.0"
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
