--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "cookie": "^0.5.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
@@ -28,6 +29,7 @@
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
