--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^10.12.12",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
