--- a/package.json
+++ b/package.json
@@ -35,11 +35,15 @@
     "react-dom": "18.2.0",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/cookie": "^0.5.1",
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/formidable": "^2.0.6",
+    "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/uuid": "^9.0.1"
   }
 }
