--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@lottiefiles/lottie-player": "^1.7.1",
     "@mui/material": "^5.13.3",
+    "@types/lodash": "^4.14.195",
     "@types/node": "20.1.5",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -27,6 +28,7 @@
     "framer-motion": "^10.12.12",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.4.2",
     "postcss": "8.4.23",
